--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,449 @@
 body{
 		padding: 0;
 		margin: 0;
+		font-family: "Sans Serif";
+
 	}
 	
 	.img{
-	background-image: url("../img/slide1.jpg")!important;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("../img/slide1.jpg")!important;
+	color: white;
+
+	background-repeat: no-repeat;
+    width: 100%!important;
+	height:550px;
+	background-size: cover!important;
+	
+	}
+
+	.img1{
+
+	background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("../img/staff.jpg")!important;
+	color: white;
 
 	background-repeat: no-repeat;
 
-	height:400px;
+	height:550px;
+	width: 100%!important;
 	background-size: cover!important;
 	
+
+
+	}
+
+
+   .img2{
+
+   	background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("../img/slide1.jpg")!important;
+	color: white;
+
+	background-repeat: no-repeat;
+    width: 100%!important;
+	height:550px;
+	background-size: cover!important;
+	
+
+
+   }
+   
+
+  
+
+   nav{
+   	background-color: transparent;
+   }
+
+
+   	#service{
+   		background-image: url("../img/fi.png");
+   		background-repeat: no-repeat;
+   		width: 100%!important;
+   		height: 400px;
+   		margin-top: 2rem;
+   		background-size: cover!important;
+   	}
+
+   #font-size{
+
+   	font-size: 70px;
+   }
+  
+   #ice{
+   	display: flex!important;
+   	justify-content: space-around!important;
+   }
+    #foot{
+   	background-color: #000000b3;
+   	width: 100%;
+   	color: white;
+   	height: 450px;
+   	padding-top: 9rem;
+   	font-size: 20px;
+   	padding-left: 9rem;
+
+   }
+
+   #icon{
+   	font-size: 7rem;
+   }
+
+   #icon5{
+   	font-size: 5rem;
+   }
+
+   #active{
+   	display: flex!important;
+   	justify-content: space-around;
+   }
+   
+   .follow{
+   	height: 10rem;
+   	width: 10rem;
+   	border-radius: 50%;
+   	background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+   }
+
+   #post{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("img/slide1.jpg")!important;
+    width: 100%;
+
+	background-repeat: no-repeat;
+
+	height:350px;
+   }  
+
+
+  .vert .carousel-item-next.carousel-item-left,
+.vert .carousel-item-prev.carousel-item-right {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
 }
+
+.vert .carousel-item-next,
+.vert .active.carousel-item-right {
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100% 0);
+}
+
+.vert .carousel-item-prev,
+.vert .active.carousel-item-left {
+-webkit-transform: translate3d(0,-100%, 0);
+        transform: translate3d(0,-100%, 0);
+}
+
+
+   #indic{
+  cursor: pointer;
+  height: 15px!important;
+  width: 15px!important;
+  margin: 0 2px!important;
+  padding: 10px;
+  margin-bottom: 40px!important;
+
+  border-radius: 50%!important;
+ 
+
+}
+
+a{
+  color: white;
+}
+
+/*
+.carousel-indicators{
+
+position: absolute!important;
+z-index: 15;
+display: block;
+
+}*/
+/*
+#next-icon{
+  position: absolute;
+  
+  height: 70px!important;
+  width: 70px!important;
+  top: 20rem;
+
+
+}*/
+
+
+#my-flex {
+    position: absolute;
+    
+    bottom: 10rem;
+    left: 65rem;
+    
+    z-index: 15;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding-left: 0;
+    margin-right: 15%;
+    margin-left: 15%;
+    list-style: none;
+}
+
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 1rem;
+
+    }
+
+
+
+#angle-down {
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+    left: 40rem;
+
+    
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 15%;
+    color: #fff;
+    text-align: center;
+    opacity: .5;
+    
+}
+
+
+hr{
+ width: 14rem;
+ background-color: green;
+ height: 7px;
+
+  
+}
+
+
+@media only screen and (max-width: 600px)  {
+
+/*
+  #service2{
+    
+    margin-top: 2rem!important;
+
+  }
+ */
+
+ /*.hello{
+  margin-top: 15rem!important;
+ }*/
+  
+  .navbar{
+    background-color: black;
+  }
+ 
+   /*#service2{
+    background-image: url("img/gg.png")!important;
+      background-repeat: no-repeat;
+      width: 100%!important;
+      height: 400px;
+      margin-top: 2rem;
+      background-size: cover!important;
+   }*/
+ }
+
+
+ @media only screen and (max-width: 1226px)  {
+
+
+  
+  #indic{
+  cursor: pointer;
+  height: 15px!important;
+  width: 15px!important;
+  margin: 0 2px!important;
+  padding: 10px;
+  margin-right: 30px!important;
+
+  border-radius: 50%!important;
+ 
+
+}
+
+  #my-flex {
+    position: absolute;
+    
+    bottom: 1rem!important;
+    left: 10rem!important;
+    
+    z-index: 1!important;
+    display: -ms-flexbox;
+  
+    
+    padding-left: 0;
+    margin-right: 20%;
+    margin-top: 15%;
+    margin-left: 0%!important;
+    list-style: none;
+}
+
+.flex-column {
+    
+    flex-direction: row !important;
+}
+
+
+
+#angle-down {
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+    left: 20rem!important;
+
+    
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 15%;
+    color: #fff;
+    text-align: center;
+    opacity: .5;
+    
+}
+
+
+}
+
+
+@media only screen and (max-width: 574px)  {
+
+  #service-card2,#service-card1{
+    
+      margin-top: 2rem;
+      
+   }
+
+    #port-card1{
+    
+      margin-top: 15rem;
+      
+   }
+
+   #port-card2,#port-card3{
+    margin-top: 5rem
+  }
+
+
+
+
+.hello{
+  margin-top: 30rem!important;
+}
+
+
+.card-img-top {
+    width: 70%;
+    padding-left: 10rem;
+}
+
+
+}
+
+
+ 
+@media only screen and (max-width: 767px)  {
+
+
+ #post{
+  width: 30rem!important;
+ }
+
+
+
+}
+
+
+ 
+@media only screen and (max-width: 881px)  {
+
+
+
+
+}
+
+
+
+ #fline1{
+    border-right: 3px solid white;
+    height: 15rem;
+  }
+
+#fline2{
+
+border-right: 3px solid white;
+height: 15rem;
+}
+
+
+#fline3{
+  border-right: 3px solid white;
+  height: 15rem;
+}
+
+/*Before it was 821*/
+@media only screen and (max-width: 750px)  {
+
+/*
+  #fline1{
+    border-bottom: 3px solid white!important;
+    border-left: 
+    height: 15rem;
+  }
+
+#fline2{
+
+border-bottom: 3px solid white!important;
+height: 15rem;
+}
+
+
+#fline3{
+  border-bottom: 3px solid white!important;
+  height: 15rem;
+}
+*/
+
+ #foot{
+ 	height: 910px!important;
+ 	padding-top: 20px!important;
+ 	padding-right: 8rem!important;
+ }
+
+ 
+ #flist{
+ 	  display: inline-flex !important;
+ 	 padding-right: 20px;
+ }
+
+ #icon1{
+ 	padding-right: 15px;
+ 	}
+
+ #fline2{
+ 	margin-top: 10px!important;
+ }
+
+ #fline1{
+ 	padding-top: 5rem;
+ }
+
+  
+  #fline4{
+  	margin-top: 20px;
+  }
+
+
+/*box-shadow: 10px 10px 10px 10px #888888;*/
+
+
