--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ body{
 
 
 	}
-	
+
+
 	.img{
 	background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("../img/slide1.jpg")!important;
 	color: white;
@@ -44,7 +45,6 @@ body{
 	background-size: cover!important;
 	
 
-
    }
    
 
@@ -59,7 +59,7 @@ body{
    		background-image: url("../img/fi.png");
    		background-repeat: no-repeat;
    		width: 100%!important;
-   		height: 400px;
+   		height: 500px;
    		margin-top: 2rem;
    		background-size: cover!important;
    	}
@@ -81,6 +81,20 @@ body{
    	padding-top: 9rem;
    	font-size: 20px;
    	padding-left: 9rem;
+
+   }
+   
+
+   #fline1, #fline2,#fline3{
+   	border-right: 3px solid white;
+   }
+   /*WRITE EVERY CODE INCLUDING MEDIA QUERY OF THE FOOTER HERE*/
+
+   @media only screen and (max-width: 286px)  {
+   
+   #flist{
+   	display: inline-flex;
+   }
 
    }
 
@@ -105,13 +119,25 @@ body{
    }
 
    #post{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("img/slide1.jpg")!important;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("../img/slide1.jpg")!important;
     width: 100%;
 
 	background-repeat: no-repeat;
 
 	height:350px;
    }  
+
+
+   #test-sm{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),url("../img/slide1.jpg")!important;
+    
+
+	background-repeat: no-repeat;
+
+	height:350px;
+	color: white!important;
+   }  
+
 
 
   .vert .carousel-item-next.carousel-item-left,
@@ -135,13 +161,13 @@ body{
 
    #indic{
   cursor: pointer;
-  height: 15px!important;
-  width: 15px!important;
-  margin: 0 2px!important;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
   padding: 10px;
-  margin-bottom: 40px!important;
+  margin-bottom: 40px;
 
-  border-radius: 50%!important;
+  border-radius: 50%;
  
 
 }
@@ -150,6 +176,10 @@ a{
   color: white;
 }
 
+#recent-sm{
+  
+  display: none;	
+}
 /*
 .carousel-indicators{
 
@@ -223,68 +253,242 @@ hr{
   
 }
 
+/*@media screen and (max-width: 767px) and (min-width: 150px){*/
 
-@media only screen and (max-width: 600px)  {
+/* @media screen and (max-width: 259px) and (min-width: 228px)  {
+ 
+  #angle-down {
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+    left: 5rem;
 
-/*
-  #service2{
     
-    margin-top: 2rem!important;
-
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 15%;
+    color: #fff;
+    text-align: center;
+    opacity: .5;
+    
   }
- */
 
- /*.hello{
-  margin-top: 15rem!important;
- }*/
-  
-  .navbar{
-    background-color: black;
-  }
- 
-   /*#service2{
-    background-image: url("img/gg.png")!important;
-      background-repeat: no-repeat;
-      width: 100%!important;
-      height: 400px;
-      margin-top: 2rem;
-      background-size: cover!important;
-   }*/
- }
-
-
- @media only screen and (max-width: 1226px)  {
-
-
-  
-  #indic{
-  cursor: pointer;
-  height: 15px!important;
-  width: 15px!important;
-  margin: 0 2px!important;
-  padding: 10px;
-  margin-right: 30px!important;
-
-  border-radius: 50%!important;
- 
-
-}
 
   #my-flex {
+   display: none;
+}
+  
+
+  h1{
+  	font-size: 10px;
+  }
+
+
+ }*/
+
+ /*MEDIA QUERY FOR HERO IMAGES STARTS HERE*/
+ @media screen and (max-width: 942px) and (min-width: 865px) {
+
+ #my-flex {
     position: absolute;
-    
+    display: inline-flex;
     bottom: 1rem!important;
-    left: 10rem!important;
+    left: 7rem;
     
-    z-index: 1!important;
+    z-index: 1;
     display: -ms-flexbox;
   
     
     padding-left: 0;
     margin-right: 20%;
     margin-top: 15%;
-    margin-left: 0%!important;
+    margin-left: 0%;
     list-style: none;
+    padding-right: 20px;
+}
+
+
+
+.flex-column {
+    
+    flex-direction: row !important;
+}
+
+
+
+#angle-down {
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+    left: 23rem;
+
+   
+
+    
+}
+
+#indic{
+  cursor: pointer;
+  height: 15px!important;
+  width: 15px!important;
+  left: 10px;
+  margin-right: q0px;
+  margin-bottom: 40px!important;
+
+  border-radius: 50%!important;
+ 
+
+}
+
+
+}
+
+@media screen and (max-width: 1224px) and (min-width: 1050px) {
+
+ #my-flex {
+    position: absolute;
+    display: inline-flex;
+    bottom: 4rem!important;
+    left: 60rem;
+    
+    z-index: 1;
+    display: -ms-flexbox;
+  
+    
+    padding-left: 0;
+    margin-right: 20%;
+    margin-top: 15%;
+    margin-left: 0%;
+    list-style: none;
+    padding-right: 20px;
+
+}
+
+
+
+
+
+
+#angle-down {
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+    left: 35rem;
+
+   
+
+    
+}
+
+#indic{
+  cursor: pointer;
+  height: 15px!important;
+  width: 15px!important;
+  left: 10px;
+  margin-right: q0px;
+  margin-bottom: 40px!important;
+
+  border-radius: 50%!important;
+ 
+
+}
+
+
+}
+
+@media screen and (max-width: 1049px) and (min-width: 945px) {
+
+ #my-flex {
+    position: absolute;
+    display: inline-flex;
+    bottom: 5rem!important;
+    left: 55rem;
+    
+    z-index: 1;
+    display: -ms-flexbox;
+  
+    
+    padding-left: 0;
+    margin-right: 20%;
+    margin-top: 15%;
+    margin-left: 0%;
+    list-style: none;
+    padding-right: 20px;
+
+}
+
+
+
+
+
+
+#angle-down {
+    position: absolute;
+    top: 20rem;
+    bottom: 0;
+    left: 25rem;
+
+   
+
+    
+}
+
+#indic{
+  cursor: pointer;
+  height: 15px!important;
+  width: 15px!important;
+  left: 10px;
+  margin-right: q0px;
+  margin-bottom: 40px!important;
+
+  border-radius: 50%!important;
+ 
+
+}
+
+
+}
+/*before 289  before max 878*/
+
+@media screen and (max-width: 860px) and (min-width: 239px) {
+   /*before 767*/
+   .hero{
+   	padding-top: 20px;
+   }
+  
+	.img,.img1,.img2{
+    
+     height: 620px;
+
+    }
+  .navbar{
+    background-color: black;
+  }
+
+  h1{
+  	font-size: 40px!important;
+  }
+ 
+
+  #my-flex {
+    position: absolute;
+    display: inline-flex;
+    bottom: 1rem!important;
+    left: 5rem;
+    
+    z-index: 1;
+    display: -ms-flexbox;
+  
+    
+    padding-left: 0;
+    margin-right: 20%;
+    margin-top: 15%;
+    margin-left: 0%;
+    list-style: none;
+    padding-right: 20px;
 }
 
 .flex-column {
@@ -298,153 +502,203 @@ hr{
     position: absolute;
     top: 20rem;
     bottom: 0;
-    left: 20rem!important;
+    left: 24rem;
+
+   
 
     
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 15%;
-    color: #fff;
-    text-align: center;
-    opacity: .5;
-    
+}
+
+#indic{
+  cursor: pointer;
+  height: 15px!important;
+  width: 15px!important;
+  left: 10px;
+  margin-right: q0px;
+  margin-bottom: 40px!important;
+
+  border-radius: 50%!important;
+ 
+
 }
 
 
 }
 
 
-@media only screen and (max-width: 574px)  {
 
-  #service-card2,#service-card1{
-    
-      margin-top: 2rem;
-      
+/*ENDS HERE FOR HERO IMAGES*/
+
+
+
+  /*OUR SERVICE MEDIA QUERIES*/
+
+
+  @media screen and (max-width: 575px) and (min-width: 402px) {
+
+
+  #service{
+   	padding-left: 5rem;
+   	padding-right: 5rem;
    }
 
-    #port-card1{
-    
-      margin-top: 15rem;
-      
+
+  
+  }
+
+  @media screen and (max-width: 575px) and (min-width: 150px) {
+
+
+  #mobile{
+   	padding-top: 2rem;
    }
 
-   #port-card2,#port-card3{
-    margin-top: 5rem
-  }
+ 
+
+   	#port{
+   		padding-top: 18rem;
+   	}
 
 
 
 
-.hello{
-  margin-top: 30rem!important;
-}
-
-
-.card-img-top {
-    width: 70%;
-    padding-left: 10rem;
-}
-
-
-}
-
+  /*ENDS HERE*/
 
  
-@media only screen and (max-width: 767px)  {
-
-
- #post{
-  width: 30rem!important;
- }
-
-
-
-}
-
-
  
-@media only screen and (max-width: 881px)  {
-
-
-
-
-}
-
-
-
- #fline1{
-    border-right: 3px solid white;
-    height: 15rem;
-  }
-
-#fline2{
-
-border-right: 3px solid white;
-height: 15rem;
-}
-
-
-#fline3{
-  border-right: 3px solid white;
-  height: 15rem;
-}
-
-/*Before it was 821*/
-@media only screen and (max-width: 750px)  {
-
-/*
-  #fline1{
-    border-bottom: 3px solid white!important;
-    border-left: 
-    height: 15rem;
-  }
-
-#fline2{
-
-border-bottom: 3px solid white!important;
-height: 15rem;
-}
-
-
-#fline3{
-  border-bottom: 3px solid white!important;
-  height: 15rem;
-}
-*/
-
- #foot{
- 	height: 910px!important;
- 	padding-top: 20px!important;
- 	padding-right: 8rem!important;
- }
-
- 
- #flist{
- 	  display: inline-flex !important;
- 	 padding-right: 20px;
- }
 
  #icon1{
  	padding-right: 15px;
  	}
 
- #fline2{
- 	margin-top: 10px!important;
- }
-
- #fline1{
- 	padding-top: 5rem;
- }
-
-  
-  #fline4{
-  	margin-top: 20px;
-  }
+ 
 
 
 /*box-shadow: 10px 10px 10px 10px #888888;*/
 
 
+
+
+
+
+
+@media only screen and (max-width: 777px)  {
+
+#recent-lg{
+  	display: none!important;
+}
+
+#recent-sm{
+  
+  display: block;	
+}
+
+
+
+}
+
+
+
+
+
+  /*STYLING FOR THE TABS STARTS*/
+
+
+  @media only screen and (max-width: 466px) {
+
+  	#all-tabs{
+  		display: none;
+  	}
+  	#inc-mobile{
+  		display: block!important;
+  	}
+
+  	#sm1,#sm2{
+  		margin-top: 2rem;
+  	}
+  } 
+
+
+
+  /*STYLINGS ENDS HER*/
+
+
+/*STYLING FOR FOOTER IN LARGE AND MOBILE VIEWS*/
+
+   #foot{
+   	background-color: #000000b3;
+   	width: 100%;
+   	color: white;
+   	height: 450px;
+   	padding-top: 9rem;
+   	font-size: 20px;
+   	padding-left: 9rem;
+
+   }
+
+
+
+a{
+color: white;
+}
+
+#fline1, #fline2,#fline3{
+  border-right: 3px solid white;
+}
+
+
+
+@media screen and (max-width: 767px) and (min-width: 150px){
+
+
+  #email{
+    font-size: 16px;
+  }
+
+  #foot{
+
+  height: 820px;
+  padding-left: 1rem;
+  padding-top: 1rem;
+
+  }
+
+  #flist{
+    display: inline-flex;
+  }
+  
+  #fline1, #fline2,#fline3{
+  border:none;
+  }
+
+
+}
+
+
+@media screen and (max-width: 338px){
+
+#exampleInputEmail1{
+
+	width: 70%;
+}
+
+
+}
+@media screen and (min-width: 768px){
+
+#email{
+  font-size: 15px;
+}
+
+}
+
+
+
+
+/*END OF IT*/
+
+/*AOS ANIMATION START*/
+
+
+
+/*END OF*/
